--- a/styles.css
+++ b/styles.css
@@ -359,6 +359,11 @@ p {
     top: -125px;
 }
 
+.row__bg__dots-5 {
+    width: 425px;
+    left: 35%; 
+    top: 600px;
+}
 
 .row__bg__button-1 {
     width: 125px;
@@ -371,6 +376,14 @@ p {
     height: 100px;
     top: 0;
     left: -200px;
+    opacity: 0.1;
+    animation-delay: 2s;
+}
+
+.row__bg__waves-2 {
+    height: 100px;
+    top: 800px;
+    right: -200px;
     opacity: 0.1;
     animation-delay: 2s;
 }
@@ -401,6 +414,15 @@ p {
     top: 500px;
     left: 150px;
     opacity: 0.2;
+    animation-delay: 2s;
+}
+
+
+.row__bg__button-3 {
+    height: 200px;
+    top: 1000px;
+    left: -150px;
+    opacity: 0.4;
     animation-delay: 2s;
 }
 
@@ -476,6 +498,10 @@ p {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.main-video-description {
+    margin-bottom: 100px;
 }
 
 .rotate-slow {
